--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     console:
       enabled: true
   jpa:
-    defer-datasource-initialization: true
+    defer-datasource-initialization: true # resource/*.sql 파일을 자동으로 넣어주는 옵션 
     database-platform: H2
     hibernate:
       ddl-auto: create-drop
